# Polynostr

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.forge/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.github/workflows/: rust.yml
.specify/: init-options.json  integration.json
.specify/integrations/: forge.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
plans/: 2026-03-16-polynostr-polymarket-nostr-integration-v1.md  2026-03-28-2026-03-28-polynostr-phase-2-execution-checklist-v1.md  2026-03-28-2026-03-28-polynostr-phase-2-realtime-alerts-plan-v1.md  event_slug_fix.md  fixes_phase1.md  summary_phase1.md
specs/001-closing-events/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-closing-events/contracts/: command-interface.md
src/: bot.rs  config.rs  format.rs  main.rs
src/alerts/: error.rs  evaluator.rs  manager.rs  mod.rs  model.rs  notifier.rs  parser.rs  source.rs
src/alerts/repository/: memory.rs  mod.rs  sqlite.rs
src/commands/: alert_add.rs  alert_list.rs  alert_pause.rs  alert_remove.rs  alert_resume.rs  alert_test.rs  closing.rs  help.rs  market.rs  mod.rs  portfolio.rs  price.rs  search.rs  trending.rs
src/polymarket/: data.rs  gamma.rs  mod.rs
