[package]
name = "polynostr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
nostr-sdk = { version = "0.44", features = ["nip04", "nip59"] }
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
