[package]
name = "polynostr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
build = "build.rs"

[dependencies]
nostr-sdk = { version = "0.44", features = ["nip04", "nip59"] }
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "http2", "charset"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
